--- a/finalproject.css
+++ b/finalproject.css
@@ -1,12 +1,53 @@
 body
 {
-background-color:#b30000;
+background-color:#c90000;
+}
+
+
+.bodya
+{
+background-color:#000000;
+}
+
+.bodyp
+{
+background-color:#f7e527;
 }
 
 
 header
 {
 background-color:#d9d9d9;
+margin: auto;
+border-radius: 10px;
+padding:10px;
+margin: 10px;
+font-size: 180%;
+font-weight: bolder;
+}
+
+
+
+
+
+.headerabt
+{
+background-color:#00e5ff;
+margin: auto;
+border-radius: 10px;
+padding:10px;
+margin: 10px;
+font-size: 180%;
+font-weight: bolder;
+}
+
+
+
+
+
+.headerprob
+{
+background-color:white;
 margin: auto;
 border-radius: 10px;
 padding:10px;
@@ -23,8 +64,40 @@ margin: auto;
 border-radius: 10px;
 padding:10px;
 margin: 10px;
+font-size:120%;
+color:#434447;
+text-align: center;
 }
 
+
+
+.navabt
+{
+background-color: #00e5ff;
+margin: auto;
+border-radius: 10px;
+padding:10px;
+margin: 10px;
+font-size:120%;
+color:#434447;
+text-align: center;
+}
+
+
+
+
+
+.navprob
+{
+background-color: white;
+margin: auto;
+border-radius: 10px;
+padding:10px;
+margin: 10px;
+font-size:120%;
+color:#434447;
+text-align: center;
+}
 
 main
 {
@@ -36,13 +109,72 @@ padding: 10px;
 margin: 10px;
 float: left;
 width: 1280px;
+font-size:110%;
 }
 
 
 
-.maintwo
+.mainabt
 {
-background-color: #d9d9d9;
+background-color: #00e5ff;
+height: auto;
+border-radius: 10px;
+margin: auto;
+padding: 10px;
+margin: 10px;
+float: left;
+width: 1280px;
+font-size:110%;
+}
+
+
+.mainprob
+{
+background-color: white;
+height: 175px;
+border-radius: 10px;
+margin: auto;
+padding: 10px;
+margin: 10px;
+float: left;
+width: 1280px;
+font-size:110%;
+}
+
+
+
+.sidelabt
+{
+background-color:#00e5ff;
+float: left;
+width: 250px;
+height: 350px;
+color: white;
+border-radius: 10px;
+padding: 15px;
+margin:auto;
+
+}
+
+
+
+.maintwoprob
+{
+background-color:white;
+height: 175px;
+border-radius: 10px;
+margin-left: 310px;
+margin-right: 310px;
+padding: 10px;
+margin: 10px;
+float: left;
+width: 1280px;
+}
+
+
+.maintwoabt
+{
+background-color:#00e5ff;
 height: 175px;
 border-radius: 10px;
 margin-left: 310px;
@@ -55,7 +187,6 @@ width: 1280px;
 
 
 
-
 .sideleft
 {
 background-color:#c5ceb9;
@@ -65,9 +196,62 @@ height: 350px;
 color: white;
 border-radius: 10px;
 padding: 15px;
-margin-left: 10px;
+margin:auto;
 
 }
+
+
+
+.sidelabt
+{
+background-color:#00e5ff;
+float: right;
+width: 250px;
+height: 350px;
+color: white;
+border-radius: 10px;
+padding: 15px;
+margin:auto;
+font-weight: bold;
+text-align: center;
+margin-left:10px;
+
+}
+
+
+
+.siderprob
+{
+background-color:white;
+float: left;
+width: 250px;
+height: 350px;
+color: white;
+border-radius: 10px;
+padding: 15px;
+margin:auto;
+
+}
+
+
+
+.siderr
+{
+background-color: #c5ceb9;
+float: right;
+width: 250px;
+height: 350px;
+color: white;
+border-radius: 10px;
+padding: 15px;
+margin:auto;
+font-size: 130%;
+font-weight: bold;
+text-align: center;
+margin-left:10px;
+}
+
+
 
 
 
@@ -81,12 +265,38 @@ height: 350px;
 color: white;
 border-radius: 10px;
 padding: 15px;
-margin-right: 10px;
-font-size: 130%;
-font-weight: bold;
-text-align: center;
-
+margin: auto;
 }
+
+
+
+.siderabout
+{
+background-color: #00e5ff;
+float: right;
+width: 250px;
+height: 350px;
+color: white;
+border-radius: 10px;
+padding: 15px;
+margin: auto;
+font-size: 130%;
+}
+
+
+
+.sidelprob
+{
+background-color: #00e5ff;
+float: right;
+width: 250px;
+height: 350px;
+color: white;
+border-radius: 10px;
+padding: 15px;
+margin: auto;
+}
+
 
 
 .links
@@ -109,5 +319,40 @@ border-radius: 10px;
 padding:10px;
 margin: 10px;
 clear: left;
+width: 1280px;
+}
 
+
+
+
+.footabt
+{
+
+background-color: #00e5ff;
+margin: auto;
+border-radius: 10px;
+padding:10px;
+margin: 10px;
+clear: left;
+width: 1280px;
+}
+
+
+.footprob
+{
+
+background-color: white;
+margin: auto;
+border-radius: 10px;
+padding:10px;
+margin: 10px;
+clear: left;
+width: 1280px;
+}
+
+
+.hdodger
+{ 
+text-decoration: underline;
+text-align: center;
 }
