--- a/finalproject.css
+++ b/finalproject.css
@@ -108,7 +108,7 @@ margin: auto;
 padding: 10px;
 margin: 10px;
 float: left;
-width: 1280px;
+width:auto;
 font-size:110%;
 }
 
@@ -319,7 +319,7 @@ border-radius: 10px;
 padding:10px;
 margin: 10px;
 clear: left;
-width: 1280px;
+width: auto;
 }
 
 
