--- a/finalproject.css
+++ b/finalproject.css
@@ -226,7 +226,7 @@ background-color:white;
 float: left;
 width: 250px;
 height: 350px;
-color: white;
+color: black;
 border-radius: 10px;
 padding: 15px;
 margin:auto;
