--- a/finalproject.css
+++ b/finalproject.css
@@ -226,10 +226,11 @@ background-color:white;
 float: left;
 width: 250px;
 height: 350px;
-color: black;
 border-radius: 10px;
 padding: 15px;
 margin:auto;
+  position: right;
+
 
 }
 
