--- a/finalproject.css
+++ b/finalproject.css
@@ -326,7 +326,7 @@ width: auto;
 
 
 
-.footabt
+.footabttttt
 {
 
 background-color: #00e5ff;
@@ -339,7 +339,7 @@ width: 1280px;
 }
 
 
-.footprob
+.footproj
 {
 
 background-color: white;
