--- a/finalproject.css
+++ b/finalproject.css
@@ -11,7 +11,7 @@ background-color:#000000;
 
 .bodyp
 {
-background-color:#f7e527
+background-color:#f7e527;
 }
 
 
@@ -225,11 +225,11 @@ margin-left:10px;
 background-color:white;
 float: left;
 width: 250px;
-height: 350px;
+height: auto;
 border-radius: 10px;
 padding: 15px;
 margin:auto;
-  position: right;
+  position: absolute;
 
 
 }
