--- a/finalproject.css
+++ b/finalproject.css
@@ -223,13 +223,13 @@ margin-left:10px;
 .siderprob
 {
 background-color:white;
-float: left;
+float: right;
 width: 250px;
 height: auto;
 border-radius: 10px;
 padding: 15px;
 margin:auto;
-  position: absolute;
+
 
 
 }
